[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Boxes/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/EnemyStat.tscn" type="PackedScene" id=3]
[ext_resource path="res://Boxes/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sound/Hit.wav" type="AudioStream" id=5]
[ext_resource path="res://Sound/PlayerAttackSound.wav" type="AudioStream" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 flash_color: hint_color = vec4(1.0);
uniform float flash_modifier: hint_range(0.0, 1.0) = 0;

void fragment(){
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 1 )

[node name="Emeny" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )
MAX_SPEED = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
use_parent_material = true

[node name="HitBox" parent="Sprite" instance=ExtResource( 4 )]
collision_layer = 8

[node name="RayCast2D" type="RayCast2D" parent="Sprite"]
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_mask = 64

[node name="EnemyStat" parent="." instance=ExtResource( 3 )]

[node name="Center" type="Position2D" parent="."]

[node name="SpellCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpellCheck"]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="Attack" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="HitSoundCount" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="area_entered" from="HurtBox" to="EnemyStat" method="_on_HurtBox_area_entered"]
[connection signal="hit" from="HurtBox" to="EnemyStat" method="_on_HurtBox_hit"]
[connection signal="gethit" from="EnemyStat" to="." method="_on_EnemyStat_gethit"]
[connection signal="area_entered" from="SpellCheck" to="." method="_on_SpellCheck_area_entered"]
[connection signal="area_exited" from="SpellCheck" to="." method="_on_SpellCheck_area_exited"]
[connection signal="timeout" from="Attack" to="." method="_on_Attack_timeout"]
[connection signal="timeout" from="HitSoundCount" to="." method="_on_HitSoundCount_timeout"]
